Taking screenshots while in full screen transparent mode

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Hello World!</title>
+    <script>let exports = {};</script>
     <script src="dist/app.js" ></script>
 </head>
 <body>
