Live template matching! Woo!

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
 <head>
-    <title>Hello World!</title>
-    <script>let exports = {};</script>
-    <script src="dist/app.js" ></script>
+    <title>Tarkov Inventory Tracker</title>
+    <style>
+        html, body {
+            overflow: hidden;
+        }
+
+        body {
+            background-color: rgba(0,0,0,0);
+        }
+    </style>
 </head>
 <body>
-<h1>Hello World!</h1>
+    <canvas id="canvas"></canvas>
+    <script>let exports = {};</script>
+    <script src="dist/app.js" ></script>
 </body>
 </html>
