--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <body>
     <canvas id="canvas"></canvas>
     <script>let exports = {};</script>
-    <script src="dist/app.js" ></script>
+    <script src="dist/bundle.js" ></script>
 </body>
 </html>
